# braid-kg

./: .gitignore  .kgconfig  AGENTS.md  README.md  pyproject.toml
.braid/: config.toml
.braid/memory/: MEMORY.md
.braid/memory/decisions/: 0001-llm-gemini-en-fase-0.md  0002-pivote-stack-local-cognee-1-sin-networkx.md  0003-re-pivote-gemini-por-bloqueo-r2.md  0004-scope-reducido-por-quota-flash.md  0005-ollama-cloud-kimi-bge-m3-local-kuzu.md  0006-env-litellm-colon-dodge.md  0007-todo-centralizar-cognee-system-en-braid-cognee.md  0007-todo-centralizar-cognee-system-en-wikiforge-cognee.md  0008-alinear-versions-de-cognee-entre-venvs-braid-y-cognee-mcp.md  0009-auto-bootstrap-rag-via-session-hook.md  0010-suite-braid-eval.md  0010-suite-wikiforge-eval.md  0011-reranker-bge-v2-m3.md  0012-reranker-cloud-cohere-openrouter.md  0014-duckdb-catalog.md  0015-adopt-braid-name-and-layout.md  0016-project-boundary-memory-resolution.md  0017-universal-agent-init.md  0018-doctor-status-json-config-hardening.md  0019-operational-patterns-command.md  0020-obsidian-vault-export.md  ADR-0001-adopt-braid-name.md  ADR-0001-rename-wikiforge-to-fairlead.md
.braid/memory/eval/: questions.json
.braid/memory/plans/: 0001-fase-0-bootstrap-questions.md  0001-fase-0-bootstrap-results.md  0001-fase-0-bootstrap.md  0001-fase-0-postmortem.md  0002-fase-1-bootstrap-results.md  0002-fase-1-bootstrap.md  0003-fase-2-progresos.md  0004-auto-bootstrap-rag.md  0005-braid-eval-baseline.md  0005-wikiforge-eval-baseline.md  0006-reranker-activation.md
.github/workflows/: ci.yml
.memory/: MEMORY.md
.memory/decisions/: 0001-llm-gemini-en-fase-0.md  0002-pivote-stack-local-cognee-1-sin-networkx.md  0005-ollama-cloud-kimi-bge-m3-local-kuzu.md  0007-todo-centralizar-cognee-system-en-wikiforge-cognee.md  0008-alinear-versions-de-cognee-entre-venvs-wf-y-cognee-mcp.md  0011-reranker-bge-v2-m3.md  0014-duckdb-catalog.md
.memory/eval/: questions.json
.memory/eval/runs/: baseline-fase-2.json
.memory/plans/: 0001-fase-0-bootstrap-raw-answers.json  0001-fase-0-bootstrap-results.md  0003-fase-2-progresos.md  0006-reranker-activation.md
.memory/snapshots/2026-05-02-1746-pre-pivot/: STATE.md  secrets.env.placeholder
docs/diagrams/: braid-agent-activation.excalidraw  braid-memory-boundaries.excalidraw  braid-operational-patterns.excalidraw  braid-retrieval-flow.excalidraw
scripts/: phase1_recall_demo.py  sync_motherduck.py
src/braid/: __init__.py  cli.py  config.py  ducklake.py  log.py  mcp_server.py  paths.py  runner.py  zenmux.py
src/braid/commands/: agent.py  (+12 more)
src/wikiforge/: __init__.py  cli.py  config.py  ducklake.py  log.py  mcp_server.py  paths.py  runner.py  zenmux.py
tests/: conftest.py  test_agent_init.py  test_ducklake.py  test_ducklake_hybrid.py  test_init.py  test_paths.py  test_patterns.py  test_promote.py  test_status_doctor.py  test_wiki_obsidian.py
(+14 files in other folders)
