[project]
name = "wikiforge"
version = "0.1.0"
description = "MCP-first persistent memory + KG/RAG per project for AI dev tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Alonso Gómez", email = "daniel@dalonsogomez.com" }]
license = { text = "MIT" }
dependencies = [
    "openai>=1.68,<2",
    "httpx>=0.28,<1",
]

[project.scripts]
wikiforge = "wikiforge.cli:main"

[project.optional-dependencies]
# Stack ADR 0005 + ADR 0006 (con dodge ladybug del ADR 0007).
# Instalar con `uv pip install -e ".[cognee]"`.
# Versiones pinneadas a las verificadas durante Fase 1/2 (2026-05-03/04):
cognee = [
    "cognee>=1.0.5,<1.1",
    "transformers>=5.7,<6",
    "kuzu>=0.11,<0.12",
    "ladybug>=0.16,<0.17",   # rebrand de Kuzu post-Apple; cognee 1.0.5 lo importa hardcoded
    "lancedb>=0.29,<0.30",   # 0.29.2 verificado; 0.30+ rompe lance_namespace
    "pylance<=0.36.0",       # constraint de cognee
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wikiforge"]

[tool.hatch.build.targets.sdist]
include = ["src/wikiforge"]
